# generative-ai-design-patterns

./: .gitignore  main.py  pyproject.toml
.claude/: settings.json
.devcontainer/: .env.sample  .private.bashrc  Dockerfile  devcontainer.json  init.sh
memo/: 00_development.md  template.ipynb
memo/chapter01/: agentic_ai.ipynb  building_on_apis.ipynb
